modified:   .gitignore 	modified:   apps/client/resources/web/index.html 	modified:   apps/client/resources/web/js/main.js 	modified:   apps/client/resources/web/styles.css 	modified:   apps/client/src/main.js 	modified:   apps/client/src/preload.js 	deleted:    apps/server/.wwebjs_cache/2.3000.1029659368.html 	deleted:    apps/server/.wwebjs_cache/2.3000.1029703030.html 	modified:   apps/server/package-lock.json 	modified:   apps/server/package.json 	modified:   apps/server/src/config.js 	modified:   apps/server/src/index.js 	modified:   apps/server/src/relay/relayManager.js 	modified:   docs/macos-installer.md 	modified:   index.html 	modified:   js/main.js 	modified:   package-lock.json 	modified:   package.json 	modified:   styles.css

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "waan-suite",
   "version": "0.1.0",
   "private": true,
-  "description": "WAAN macOS distribution containing the WhatsApp relay server and desktop client.",
+  "description": "WAAN macOS distribution containing the offline WhatsApp analytics dashboard.",
   "workspaces": [
     "apps/server",
     "apps/client"
