--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waan/server",
   "version": "0.1.0",
-  "description": "WhatsApp relay backend for WAAN providing REST and relay controls.",
+  "description": "Legacy relay control service (stubbed while the app runs offline).",
   "main": "src/index.js",
   "bin": {
     "waan-server": "src/index.js"
@@ -18,8 +18,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.24.0",
     "winston": "^3.12.0"
   },
   "devDependencies": {
