--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
+    "qrcode": "^1.5.4",
+    "whatsapp-web.js": "^1.24.0",
     "winston": "^3.12.0"
   },
   "devDependencies": {
