--- a/electron/package.json
+++ b/electron/package.json
@@ -12,8 +12,47 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "dependencies": {
+    "express": "^5.1.0"
+  },
   "devDependencies": {
     "electron": "^30.0.0",
     "electron-builder": "^24.0.0"
+  },
+  "build": {
+    "appId": "ai.waan.desktop",
+    "productName": "WAAN",
+    "files": [
+      "**/*",
+      "!dist{,/**}"
+    ],
+    "extraResources": [
+      {
+        "from": "..",
+        "to": "waan/web",
+        "filter": [
+          "index.html",
+          "styles.css",
+          "styles/**/*",
+          "js/**/*",
+          "vendor/**/*"
+        ]
+      },
+      {
+        "from": "../apps/server",
+        "to": "waan/apps/server",
+        "filter": [
+          "**/*",
+          "!node_modules/.cache{,/**}"
+        ]
+      },
+      {
+        "from": "../scripts",
+        "to": "waan/scripts",
+        "filter": [
+          "restore-waandata.js"
+        ]
+      }
+    ]
   }
 }
