Add Baileys WhatsApp library integration and update server components

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "WAAN macOS distribution containing the offline WhatsApp analytics dashboard.",
   "workspaces": [
     "apps/server",
-    "apps/client"
+    "apps/client",
+    "baileys-relay"
   ],
   "scripts": {
     "bootstrap": "npm install --workspaces",
