--- a/electron/package.json
+++ b/electron/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "start-backend": "node startup.js",
-    "dist": "electron-builder --mac"
+    "ensure-server-deps": "node scripts/ensure-server-deps.js",
+    "start": "npm run ensure-server-deps && electron .",
+    "start-backend": "npm run ensure-server-deps && node startup.js",
+    "dist": "npm run ensure-server-deps && electron-builder --mac"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
   "build": {
     "appId": "ai.waan.desktop",
     "productName": "WAAN",
+    "afterPack": "./scripts/after-pack.js",
     "files": [
       "**/*",
       "!dist{,/**}"
