--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "waan-suite",
   "version": "0.1.0",
   "private": true,
-  "description": "WAAN macOS distribution containing the offline WhatsApp analytics dashboard.",
+  "description": "WAAN macOS distribution containing the offline ChatScope analytics dashboard.",
   "workspaces": [
     "apps/server"
   ],
