--- a/electron/package.json
+++ b/electron/package.json
@@ -37,7 +37,8 @@
           "styles.css",
           "styles/**/*",
           "js/**/*",
-          "vendor/**/*"
+          "vendor/**/*",
+          "tpg.png"
         ]
       },
       {
