refactor: split CSS and update documentation
- Split styles.css into base and components files for better maintainability
- Updated design tokens and macOS installer documentation
- Added appConstants.js for better organization of application constants
- Updated dependencies in package.json
- Various UI and styling improvements

--- a/electron/package.json
+++ b/electron/package.json
@@ -35,6 +35,8 @@
         "filter": [
           "index.html",
           "styles.css",
+          "styles.base.css",
+          "styles.components.css",
           "styles/**/*",
           "js/**/*",
           "vendor/**/*",
