Update app configuration and dependencies
- Update server and electron package configurations
- Refactor analytics and UI components
- Remove virtualList.js and migrate to new implementation
- Add testing setup with vitest
- Update .gitignore and add new configuration files

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,9 +7,9 @@
     "waan-server": "src/index.js"
   },
   "scripts": {
-    "prestart": "node ../../scripts/restore-waandata.js",
+    "prestart": "node ../../scripts/restore-waandata.cjs",
     "start": "node src/index.js",
-    "predev": "node ../../scripts/restore-waandata.js",
+    "predev": "node ../../scripts/restore-waandata.cjs",
     "dev": "NODE_ENV=development nodemon src/index.js"
   },
   "dependencies": {
