--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "scripts": {
     "bootstrap": "npm install --workspaces",
     "lint": "eslint js apps/server/src",
+    "check:unused-exports": "eslint js apps/server/src tests",
     "check:circular": "npx --yes madge --extensions js --circular js apps/server/src",
+    "check:artifacts": "bash scripts/check-artifacts.sh",
     "test": "vitest --run",
     "verify": "npm run lint && npm test",
-    "ci:verify": "npm run verify && npm run check:circular",
+    "ci:verify": "npm run check:artifacts && npm run check:unused-exports && npm run verify && npm run check:circular",
     "coverage": "vitest --run --coverage",
     "start": "node serve.js"
   },
