Update CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,6 @@ jobs:
         run: npm run check:circular
 
       - name: Release smoke reminder
-        if: github.ref_type == 'tag'
-        run: echo "Reminder: run docs/release-smoke-checklist.md on the packaged WAAN.app artifact."
+        if: ${{ github.ref_type == 'tag' }}
+        run: |
+          echo "Reminder: run docs/release-smoke-checklist.md on the packaged WAAN.app artifact."
