--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:visual": "playwright test",
     "test:visual:update": "playwright test --update-snapshots",
     "perf:stress": "node scripts/stress-large-chat.mjs",
+    "release:cut": "node scripts/cut-release.cjs",
     "verify": "npm run lint && npm test",
     "ci:verify": "npm run check:artifacts && npm run check:unused-exports && npm run verify && npm run check:circular",
     "coverage": "vitest --run --coverage",
